fullSandbox11072023/force-app/main/default/objects/Product2/fields/Alt_Care__c.field-meta.xml
<CustomField>
    <fullName>Alt_Care__c</fullName>
    <defaultValue>&quot;Not Applicable&quot;</defaultValue>
    <label>Alt Care</label>
    <length>50</length>
    <type>Text</type>
</CustomField>