fullSandbox11072023/force-app/main/default/objects/Product2/fields/Alt_Care_ISR__c.field-meta.xml
<CustomField>
    <fullName>Alt_Care_ISR__c</fullName>
    <defaultValue>&quot;Not Applicable&quot;</defaultValue>
    <label>Alt Care ISR</label>
    <length>50</length>
    <type>Text</type>
</CustomField>