fullSandbox11072023/force-app/main/default/objects/Product2/fields/Alt_Site_List__c.field-meta.xml
<CustomField>
    <fullName>Alt_Site_List__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Alt Site List</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>