fullSandbox11072023/force-app/main/default/objects/Product2/fields/Anesthesia__c.field-meta.xml
<CustomField>
    <fullName>Anesthesia__c</fullName>
    <defaultValue>&quot;Not Applicable&quot;</defaultValue>
    <label>Anesthesia</label>
    <length>50</length>
    <type>Text</type>
</CustomField>