fullSandbox11072023/force-app/main/default/objects/Product2/fields/Anesthesia_Canada__c.field-meta.xml
<CustomField>
    <fullName>Anesthesia_Canada__c</fullName>
    <defaultValue>&quot;Not Applicable&quot;</defaultValue>
    <label>Anesthesia Canada</label>
    <length>50</length>
    <type>Text</type>
</CustomField>