fullSandbox11072023/force-app/main/default/objects/Product2/fields/Applier__c.field-meta.xml
<CustomField>
    <fullName>Applier__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Added to identify products for Sample Request Loaner.</description>
    <inlineHelpText>Added to identify products for Sample Request Loaner.</inlineHelpText>
    <label>Applier</label>
    <type>Checkbox</type>
</CustomField>