fullSandbox11072023/force-app/main/default/objects/Product2/fields/ASK_Custom_Kit__c.field-meta.xml
<CustomField>
    <fullName>ASK_Custom_Kit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Related to the &apos;ASK&apos; Products</inlineHelpText>
    <label>ASK Custom Kit</label>
    <type>Checkbox</type>
</CustomField>