fullSandbox11072023/force-app/main/default/objects/Product2/fields/Average_Weekly_Demand__c.field-meta.xml
<CustomField>
    <fullName>Average_Weekly_Demand__c</fullName>
    <label>Average Weekly Demand</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>