fullSandbox11072023/force-app/main/default/objects/Product2/fields/Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name__c</fullName>
    <label>Brand Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>