fullSandbox11072023/force-app/main/default/objects/Product2/fields/Buom__c.field-meta.xml
<CustomField>
    <fullName>Buom__c</fullName>
    <label>Buom</label>
    <length>5</length>
    <type>Text</type>
</CustomField>