fullSandbox11072023/force-app/main/default/objects/Product2/fields/Cardiac_Complimentary__c.field-meta.xml
<CustomField>
    <fullName>Cardiac_Complimentary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cardiac Complimentary</label>
    <type>Checkbox</type>
</CustomField>