fullSandbox11072023/force-app/main/default/objects/Product2/fields/Check_LATAM_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Check_LATAM_List_Price__c</fullName>
    <formula>IF(AND(List_Price__c &lt;&gt; Distributor_List__c, Sales_Org_Key__c = &quot;US103020&quot;),&quot;Mis-match&quot;,&quot;OK&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check LATAM List Price</label>
    <type>Text</type>
</CustomField>