fullSandbox11072023/force-app/main/default/objects/Product2/fields/Combined_Material_Status__c.field-meta.xml
<CustomField>
    <fullName>Combined_Material_Status__c</fullName>
    <formula>if(ISBLANK(DChain_Material_Status_Text__c),  
Material_Status_Description__c,
DChain_Material_Status_Text__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Combined Material Status</label>
    <type>Text</type>
</CustomField>