fullSandbox11072023/force-app/main/default/objects/Product2/fields/Compensatory_Rule_Exception__c.field-meta.xml
<CustomField>
    <fullName>Compensatory_Rule_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only used for Products outside of US103010 Sales Org. Do not use unless you understand what this means.</inlineHelpText>
    <label>Compensatory Rule Exception</label>
    <type>Checkbox</type>
</CustomField>