fullSandbox11072023/force-app/main/default/objects/Product2/fields/Cost_Formula__c.field-meta.xml
<CustomField>
    <fullName>Cost_Formula__c</fullName>
    <formula>IF(
OR(
Cost_Price_Unit__c  = 0,
ISBLANK(Cost_Price_Unit__c)
),
0,
/* Default */
((Cost__c / Cost_Price_Unit__c)- Transfer_Price__c )* Qty_Sales_Unit__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>