fullSandbox11072023/force-app/main/default/objects/Product2/fields/Cost_Price_Unit__c.field-meta.xml
<CustomField>
    <fullName>Cost_Price_Unit__c</fullName>
    <label>Cost Price Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>