fullSandbox11072023/force-app/main/default/objects/Product2/fields/DChain_Material_Status__c.field-meta.xml
<CustomField>
    <fullName>DChain_Material_Status__c</fullName>
    <description>&quot;DChain-spec status&quot; in SAP</description>
    <label>DChain Material Status</label>
    <length>2</length>
    <type>Text</type>
</CustomField>