fullSandbox11072023/force-app/main/default/objects/Product2/fields/Director_Above_RepRSM__c.field-meta.xml
<CustomField>
    <fullName>Director_Above_RepRSM__c</fullName>
    <formula>AND(
Director_Price__c &lt;&gt; 0,
RSM_Price__c &lt;&gt; 0,
Rep_Price__c &lt;&gt; 0,
OR(
Director_Price__c &gt; RSM_Price__c,
Director_Price__c &gt; Rep_Price__c
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Director Above RepRSM</label>
    <type>Checkbox</type>
</CustomField>