fullSandbox11072023/force-app/main/default/objects/Product2/fields/Director_Price__c.field-meta.xml
<CustomField>
    <fullName>Director_Price__c</fullName>
    <label>Director Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>