fullSandbox11072023/force-app/main/default/objects/Product2/fields/Distributor_List__c.field-meta.xml
<CustomField>
    <fullName>Distributor_List__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Distributor List</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>