fullSandbox11072023/force-app/main/default/objects/Product2/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <inlineHelpText>10 - Respiratory and Anesthesia (TFX Only), 
20 - Surgical, 
30 - Surgical, 
40 - Vascular, 
50 - Anesthesia (Arrow Only), 
60 - Cardiac</inlineHelpText>
    <label>Division</label>
    <length>2</length>
    <type>Text</type>
</CustomField>