fullSandbox11072023/force-app/main/default/objects/Product2/fields/DLX_Ultrasound_Probe_Only__c.field-meta.xml
<CustomField>
    <fullName>DLX_Ultrasound_Probe_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies products available for Vascular Bundles.</description>
    <inlineHelpText>Specifies products available for Vascular Bundles.</inlineHelpText>
    <label>DLX Ultrasound Probe Only</label>
    <type>Checkbox</type>
</CustomField>