fullSandbox11072023/force-app/main/default/objects/Product2/fields/Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Duplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used to mark the item to skip when the material exists in both US10 and US30.</inlineHelpText>
    <label>Duplicate</label>
    <type>Checkbox</type>
</CustomField>