fullSandbox11072023/force-app/main/default/objects/Product2/fields/Duplicate_Product_Class__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Product_Class__c</fullName>
    <formula>AND( 
NOT(ISBLANK(Product_Class__c)), 
Product_Class__c = Product_Group__c, 
Product_Class__c = Product_Sub_Group__c, 
Product_Class__c = Product_Line__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duplicate Product Class</label>
    <type>Checkbox</type>
</CustomField>