fullSandbox11072023/force-app/main/default/objects/Product2/fields/Each_per_Case__c.field-meta.xml
<CustomField>
    <fullName>Each_per_Case__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Each per Case</description>
    <inlineHelpText>Each per Case</inlineHelpText>
    <label>Each per Case</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>