fullSandbox11072023/force-app/main/default/objects/Product2/fields/Eaches__c.field-meta.xml
<CustomField>
    <fullName>Eaches__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows for users to order eaches as UOM when ordering Samples.  This is regulated by the Compliance Team and should not be checked for products unless approved.</description>
    <inlineHelpText>Allows for users to order eaches as UOM when ordering Samples.  This is regulated by the Compliance Team and should not be checked for products unless approved. Bin 4500 (Sample Request Type: Disposable/Single Use Product Evaluation - Eaches)</inlineHelpText>
    <label>Eaches</label>
    <type>Checkbox</type>
</CustomField>