fullSandbox11072023/force-app/main/default/objects/Product2/fields/EMS__c.field-meta.xml
<CustomField>
    <fullName>EMS__c</fullName>
    <defaultValue>&quot;Not Applicable&quot;</defaultValue>
    <label>EMS</label>
    <length>50</length>
    <type>Text</type>
</CustomField>