fullSandbox11072023/force-app/main/default/objects/Product2/fields/Exclusion_Type__c.field-meta.xml
<CustomField>
    <fullName>Exclusion_Type__c</fullName>
    <description>Used to handle exclusions/inclusions for customers/products.</description>
    <label>Exclusion Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ZA01</fullName>
            </value>
            <value>
                <fullName>ZB01</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>