fullSandbox11072023/force-app/main/default/objects/Product2/fields/Floor_List_Price_Check__c.field-meta.xml
<CustomField>
    <fullName>Floor_List_Price_Check__c</fullName>
    <formula>AND(
OR(
Floor_Price__c &gt; List_Price__c,
Floor_Price__c &gt; Rep_Price__c,
Floor_Price__c &gt; RSM_Price__c 
),
List_Price__c &gt; 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Floor List Price Check</label>
    <type>Checkbox</type>
</CustomField>