fullSandbox11072023/force-app/main/default/objects/Product2/fields/G4__c.field-meta.xml
<CustomField>
    <fullName>G4__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies products available for Vascular Bundles.</description>
    <inlineHelpText>Specifies products available for Vascular Bundles.</inlineHelpText>
    <label>G4</label>
    <type>Checkbox</type>
</CustomField>