fullSandbox11072023/force-app/main/default/objects/Product2/fields/Heater_Consumables__c.field-meta.xml
<CustomField>
    <fullName>Heater_Consumables__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Heater Consumables</label>
    <type>Checkbox</type>
</CustomField>