fullSandbox11072023/force-app/main/default/objects/Product2/fields/Heater_Contracts_Maxtec__c.field-meta.xml
<CustomField>
    <fullName>Heater_Contracts_Maxtec__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Heater Contracts Maxtec</label>
    <type>Checkbox</type>
</CustomField>