fullSandbox11072023/force-app/main/default/objects/Product2/fields/Hi_Res_Image__c.field-meta.xml
<CustomField>
    <fullName>Hi_Res_Image__c</fullName>
    <label>Hi Res Image</label>
    <type>Url</type>
</CustomField>