fullSandbox11072023/force-app/main/default/objects/Product2/fields/Interventional_Access__c.field-meta.xml
<CustomField>
    <fullName>Interventional_Access__c</fullName>
    <description>Do not use - ignore this field.</description>
    <inlineHelpText>Do not use - ignore this field.</inlineHelpText>
    <label>Interventional Access</label>
    <length>50</length>
    <type>Text</type>
</CustomField>