fullSandbox11072023/force-app/main/default/objects/Product2/fields/Interventional_Capital__c.field-meta.xml
<CustomField>
    <fullName>Interventional_Capital__c</fullName>
    <defaultValue>&quot;Not Applicable&quot;</defaultValue>
    <label>Interventional Capital</label>
    <length>50</length>
    <type>Text</type>
</CustomField>