fullSandbox11072023/force-app/main/default/objects/Product2/fields/Items_in_Set__c.field-meta.xml
<CustomField>
    <fullName>Items_in_Set__c</fullName>
    <description>Fields holds information on items included in each set.</description>
    <inlineHelpText>Fields holds items included in each set.</inlineHelpText>
    <label>Items in Set</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>