fullSandbox11072023/force-app/main/default/objects/Product2/fields/Last_Product_On_Hand_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Product_On_Hand_Update__c</fullName>
    <label>Last Product On Hand Update</label>
    <type>DateTime</type>
</CustomField>