fullSandbox11072023/force-app/main/default/objects/Product2/fields/Last_Year_ASP__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_ASP__c</fullName>
    <label>Last Year ASP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>