fullSandbox11072023/force-app/main/default/objects/Product2/fields/Low_Res_Image__c.field-meta.xml
<CustomField>
    <fullName>Low_Res_Image__c</fullName>
    <label>Low Res Image</label>
    <type>Url</type>
</CustomField>