fullSandbox11072023/force-app/main/default/objects/Product2/fields/Mark_For_deletion__c.field-meta.xml
<CustomField>
    <fullName>Mark_For_deletion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temp field created for SLO project</description>
    <label>Mark For deletion</label>
    <type>Checkbox</type>
</CustomField>