fullSandbox11072023/force-app/main/default/objects/Product2/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <externalId>true</externalId>
    <label>Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>