fullSandbox11072023/force-app/main/default/objects/Product2/fields/Material_Link__c.field-meta.xml
<CustomField>
    <fullName>Material_Link__c</fullName>
    <formula>HYPERLINK(&quot;/apex/PP_Material_Info?id=&quot; &amp;  Id, Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material Link</label>
    <type>Text</type>
</CustomField>