fullSandbox11072023/force-app/main/default/objects/Product2/fields/Material_Status__c.field-meta.xml
<CustomField>
    <fullName>Material_Status__c</fullName>
    <description>Gives the status of the material</description>
    <label>Material Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>