fullSandbox11072023/force-app/main/default/objects/Product2/fields/Material_Status_Check__c.field-meta.xml
<CustomField>
    <fullName>Material_Status_Check__c</fullName>
    <formula>IF( 
OR( 
Material_Status_Numeric__c = &quot;40&quot;, 
Material_Status_Numeric__c = &quot;60&quot;, 
Material_Status_Numeric__c = &quot;Z1&quot;, 
Material_Status_Numeric__c = &quot;Z8&quot;, 
Material_Status_Numeric__c = &quot;ZT&quot;, 
Material_Status_Numeric__c = &quot;ZE&quot;, 
AND(Material_Status__c = &quot;Z5&quot;, List_Price__c &gt; 0.0) 
),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Saleable Statuses: 40, 60, Z1, Z8, ZE, and Z5 when List &gt; Zero.</inlineHelpText>
    <label>Material Status Check</label>
    <type>Checkbox</type>
</CustomField>