fullSandbox11072023/force-app/main/default/objects/Product2/fields/Material_Status_Numeric__c.field-meta.xml
<CustomField>
    <fullName>Material_Status_Numeric__c</fullName>
    <description>SAP: X-distr.chain status</description>
    <inlineHelpText>Saleable Statuses: 40, 60, Z1, Z8, and Z5 when List &gt; Zero.</inlineHelpText>
    <label>Material Status Numeric</label>
    <length>2</length>
    <type>Text</type>
</CustomField>