fullSandbox11072023/force-app/main/default/objects/Product2/fields/Material_Status_Numeric_X_Plant__c.field-meta.xml
<CustomField>
    <fullName>Material_Status_Numeric_X_Plant__c</fullName>
    <description>SAP: X-Plant Matl Status</description>
    <label>Material Status Numeric (X-Plant)</label>
    <length>2</length>
    <type>Text</type>
</CustomField>