fullSandbox11072023/force-app/main/default/objects/Product2/fields/MRP_Group__c.field-meta.xml
<CustomField>
    <fullName>MRP_Group__c</fullName>
    <description>Repbid functionality that houses values such as MTO (Made to Order) or MTSR (Made to Stock Reserve)</description>
    <label>MRP Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>