fullSandbox11072023/force-app/main/default/objects/Product2/fields/Multi_Use_Demo__c.field-meta.xml
<CustomField>
    <fullName>Multi_Use_Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used to identify products eligible as multi use demo for Sample Request process.</description>
    <inlineHelpText>Field used to identify products eligible as multi use demo for Sample Request process Bin 3000 (Sample Request Type: Multi-Use Demo (i.e., Surgical Instrumentation)).</inlineHelpText>
    <label>Multi-Use Demo</label>
    <type>Checkbox</type>
</CustomField>