fullSandbox11072023/force-app/main/default/objects/Product2/fields/National_Pool__c.field-meta.xml
<CustomField>
    <fullName>National_Pool__c</fullName>
    <defaultValue>false</defaultValue>
    <label>National Pool</label>
    <type>Checkbox</type>
</CustomField>