fullSandbox11072023/force-app/main/default/objects/Product2/fields/Private_Label__c.field-meta.xml
<CustomField>
    <fullName>Private_Label__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Related to the &apos;ASK&apos; Products</inlineHelpText>
    <label>Private Label</label>
    <type>Checkbox</type>
</CustomField>