fullSandbox11072023/force-app/main/default/objects/Product2/fields/Product_Class__c.field-meta.xml
<CustomField>
    <fullName>Product_Class__c</fullName>
    <label>Product Class</label>
    <length>4</length>
    <type>Text</type>
</CustomField>