fullSandbox11072023/force-app/main/default/objects/Product2/fields/Product_Description_Custom__c.field-meta.xml
<CustomField>
    <fullName>Product_Description_Custom__c</fullName>
    <label>Product Description Custom</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>