fullSandbox11072023/force-app/main/default/objects/Product2/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <length>18</length>
    <type>Text</type>
</CustomField>