fullSandbox11072023/force-app/main/default/objects/Product2/fields/Product_Line_Text__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_Text__c</fullName>
    <label>Line</label>
    <length>50</length>
    <type>Text</type>
</CustomField>