fullSandbox11072023/force-app/main/default/objects/Product2/fields/Product_On_Constraint__c.field-meta.xml
<CustomField>
    <fullName>Product_On_Constraint__c</fullName>
    <formula>if(Material_Status_Numeric__c = &quot;Z1&quot;,&quot;Yes&quot;,&quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product On Constraint?</label>
    <type>Text</type>
</CustomField>