fullSandbox11072023/force-app/main/default/objects/Product2/fields/Qty_Sales_Unit__c.field-meta.xml
<CustomField>
    <fullName>Qty_Sales_Unit__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Qty/Sales Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>