fullSandbox11072023/force-app/main/default/objects/Product2/fields/Recovery_Date__c.field-meta.xml
<CustomField>
    <fullName>Recovery_Date__c</fullName>
    <description>This field is loaded via Data Loader.
Requested by Interventional BU as they need to track Recovery Date on Product which is not available on SAP side.</description>
    <label>Recovery Date</label>
    <type>Date</type>
</CustomField>