fullSandbox11072023/force-app/main/default/objects/Product2/fields/Release_Data_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Release_Data_Last_Updated__c</fullName>
    <inlineHelpText>Date/Time the &apos;Release Date&apos; and &apos;Release Qty&apos; fields were updated.</inlineHelpText>
    <label>Release Data Last Updated</label>
    <type>DateTime</type>
</CustomField>