fullSandbox11072023/force-app/main/default/objects/Product2/fields/Release_Qty__c.field-meta.xml
<CustomField>
    <fullName>Release_Qty__c</fullName>
    <inlineHelpText>Quantity of product to be released at the next release date.</inlineHelpText>
    <label>Release Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>