fullSandbox11072023/force-app/main/default/objects/Product2/fields/Rep_Price__c.field-meta.xml
<CustomField>
    <fullName>Rep_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>ZRST</inlineHelpText>
    <label>Rep Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>