fullSandbox11072023/force-app/main/default/objects/Product2/fields/Resp_Uro_AltCare_Canada__c.field-meta.xml
<CustomField>
    <fullName>Resp_Uro_AltCare_Canada__c</fullName>
    <defaultValue>&quot;Not Applicable&quot;</defaultValue>
    <label>Resp/Uro/AltCare - Canada</label>
    <length>50</length>
    <type>Text</type>
</CustomField>