fullSandbox11072023/force-app/main/default/objects/Product2/fields/Respiratory_Inside_Sales__c.field-meta.xml
<CustomField>
    <fullName>Respiratory_Inside_Sales__c</fullName>
    <defaultValue>&quot;Not Applicable&quot;</defaultValue>
    <label>Respiratory Inside Sales</label>
    <length>50</length>
    <type>Text</type>
</CustomField>