fullSandbox11072023/force-app/main/default/objects/Product2/fields/RSM_Price__c.field-meta.xml
<CustomField>
    <fullName>RSM_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>ZASD</inlineHelpText>
    <label>RSM Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>