fullSandbox11072023/force-app/main/default/objects/Product2/fields/RSM_Rep_Price_Compare2__c.field-meta.xml
<CustomField>
    <fullName>RSM_Rep_Price_Compare2__c</fullName>
    <formula>if(Rep_Price__c &lt;&gt; RSM_Price__c, &quot;Error&quot;, &quot;Match&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RSM Rep Price Compare</label>
    <type>Text</type>
</CustomField>