fullSandbox11072023/force-app/main/default/objects/Product2/fields/Sales__c.field-meta.xml
<CustomField>
    <fullName>Sales__c</fullName>
    <inlineHelpText>Last 12 Months of Sales</inlineHelpText>
    <label>Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>