fullSandbox11072023/force-app/main/default/objects/Product2/fields/Sales_Build_Key__c.field-meta.xml
<CustomField>
    <fullName>Sales_Build_Key__c</fullName>
    <label>Sales Build Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>