fullSandbox11072023/force-app/main/default/objects/Product2/fields/Sales_Org_DC__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org_DC__c</fullName>
    <formula>Sales_Org__c &amp; &quot;-&quot; &amp;  Distribution_Channel__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Org / DC</label>
    <type>Text</type>
</CustomField>