fullSandbox11072023/force-app/main/default/objects/Product2/fields/Sales_Unit__c.field-meta.xml
<CustomField>
    <fullName>Sales_Unit__c</fullName>
    <defaultValue>&quot;EA&quot;</defaultValue>
    <label>Sales Unit</label>
    <length>5</length>
    <type>Text</type>
</CustomField>