fullSandbox11072023/force-app/main/default/objects/Product2/fields/SBM_Pain_Management__c.field-meta.xml
<CustomField>
    <fullName>SBM_Pain_Management__c</fullName>
    <defaultValue>&quot;Not Applicable&quot;</defaultValue>
    <label>SBM Pain Management</label>
    <length>50</length>
    <type>Text</type>
</CustomField>