fullSandbox11072023/force-app/main/default/objects/Product2/fields/SBU__c.field-meta.xml
<CustomField>
    <fullName>SBU__c</fullName>
    <description>Sales Business Unit</description>
    <label>SBU</label>
    <length>80</length>
    <type>Text</type>
</CustomField>